# fins

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  docker-compose.yml  justfile
backend/: .env.example  Dockerfile  README.md  alembic.ini  deploy_flows.py  init_db.sql  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 022c6e677fa9_initial_migration_create_all_tables.py
backend/app/: __init__.py  admin.py  config.py  database.py  main.py
backend/app/api/: __init__.py  accounts.py  ai_chat.py  analytics.py  auth.py  chat.py  transactions.py
backend/app/flows/: __init__.py  budget_alerts.py  categorize_transactions.py  recurring_detection.py  sync_accounts.py  update_analytics.py
backend/app/models/: __init__.py  account.py  admin.py  budget.py  categorization_rule.py  sync_job.py  transaction.py  user.py
backend/app/schemas/: __init__.py
backend/app/services/: account_service.py  ai_service.py  analytics_service.py  categorization.py  file_handler.py  import_service.py  statement_processor.py  sync_job_service.py  transaction_service.py
backend/app/utils/: __init__.py  csv_parser.py  pdf_parser.py
backend/migrations/models/: 0_20260117161040_init.py
backend/scripts/: llm_list_models.py  llm_test.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useChat.ts  useFileUpload.ts
frontend/src/pages/: Accounts.tsx  Analytics.tsx  Budgets.tsx  Dashboard.tsx  Transactions.tsx
frontend/src/types/: chat.ts
(+3 files in other folders)
